feat: sonarLint fix, use java 16 stream approach for improving maintainability